# py-hla-match

./: .buildinfo  .gitignore  .readthedocs.yaml  CITATION.cff  README.md  SOFTWARE_CARD.md  THIRD_PARTY_LICENSES.md  api.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js
.doctrees/: api.doctree  environment.pickle  index.doctree  quickstart.doctree
.doctrees/_autosummary/: py_hla_match.config.HLAMatchConfig.doctree  py_hla_match.config.config_context.doctree  py_hla_match.config.doctree  py_hla_match.config.get_config.doctree  py_hla_match.config.get_config_version.doctree  py_hla_match.config.set_config.doctree  py_hla_match.exceptions.doctree  py_hla_match.export.PairwiseMatch.doctree  py_hla_match.export.doctree  py_hla_match.export.scan_loci.doctree  py_hla_match.external.DPB1Result.doctree  py_hla_match.external.DPB1TCEConfig.doctree  py_hla_match.external.DPB1TCEStatus.doctree  py_hla_match.external.doctree  py_hla_match.external.query_dpb1_tce.doctree  py_hla_match.hla.HLA.doctree  py_hla_match.hla.doctree  py_hla_match.matching.MatchResult.doctree  py_hla_match.matching.allele_match.doctree  py_hla_match.matching.allele_pair_match.doctree  py_hla_match.matching.doctree  py_hla_match.matching.multi_locus_match.doctree  (+17 more)
.github/: dependabot.yml
_autosummary/: py_hla_match.config.HLAMatchConfig.html  py_hla_match.config.config_context.html  py_hla_match.config.get_config.html  py_hla_match.config.get_config_version.html  py_hla_match.config.html  py_hla_match.config.set_config.html  py_hla_match.exceptions.html  py_hla_match.export.PairwiseMatch.html  py_hla_match.export.html  py_hla_match.export.scan_loci.html  py_hla_match.external.DPB1Result.html  py_hla_match.external.DPB1TCEConfig.html  py_hla_match.external.DPB1TCEStatus.html  py_hla_match.external.html  py_hla_match.external.query_dpb1_tce.html  py_hla_match.hla.HLA.html  py_hla_match.hla.html  py_hla_match.matching.MatchResult.html  py_hla_match.matching.allele_match.html  py_hla_match.matching.allele_pair_match.html  py_hla_match.matching.html  py_hla_match.matching.multi_locus_match.html  py_hla_match.models.Donor.html  py_hla_match.models.HLAPair.html  py_hla_match.models.Individual.html  py_hla_match.models.Patient.html  py_hla_match.models.html  py_hla_match.parser.HLADataSource.html  py_hla_match.parser.html  py_hla_match.policy.ARDMatchLevel.html  py_hla_match.policy.ARDMatchLevelCertainty.html  py_hla_match.policy.AlleleMatchLevel.html  py_hla_match.policy.ExpressionSuffixMatchLevel.html  py_hla_match.policy.ExpressionSuffixPolicy.html  py_hla_match.policy.MolecularMatchLevel.html  py_hla_match.policy.MolecularMatchLevelCertainty.html  py_hla_match.policy.html  py_hla_match.singleton.get_ard_instance.html  py_hla_match.singleton.html
_modules/: index.html
demo/: demo_benchmark.ipynb  demo_validation.ipynb
docs/: Makefile  api.rst  conf.py  index.rst
py_hla_match/: __init__.py  api.py  batch_processing.py  config.py  exceptions.py  export.py  external.py  hla.py  loader.py  main.py  matching.py  models.py  parser.py  policy.py  singleton.py
tests/: test_config.py  test_export.py  test_external.py  test_hla.py  test_loader.py  test_main.py  test_matching.py  test_models.py  test_parser.py
(+76 files in other folders)
