[tool.poetry]
name = "py-hla-match"
version = "1.0.0"
description = "A Python package for HLA matching"
authors = ["Tim Adams <tim.adams@scai.fraunhofer.de>", "Georg Popp <georg.popp@izi.fraunhofer.de>"]
license = "MIT"
readme = "README.md"
packages = [{include = "py_hla_match"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandas = "^2.2.2"
py-ard = "^1.5.5"
openpyxl = "^3.1.0"
requests = "^2.32"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"
coverage = "^7.10.2"
pip-licenses = "^5.0.0"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.core.masonry.api"
